Fix broken player on mobile

--- a/client/stylesheets/main.styl
+++ b/client/stylesheets/main.styl
@@ -377,12 +377,16 @@ footer
   padding 0 !important
   
   &.affix
-    display block
-    z-index 1111111
-    position fixed
-    top 0
-    left 0
-    right 0
+    position static
+    
+    /* Medium devices (desktops, 992px and up) */
+    @media screen and (min-width: 992px) 
+      display block
+      z-index 1111111
+      position fixed
+      top 0
+      left 0
+      right 0
   
   h1,h2,h3,h4,h5,h6,p
     margin 0
@@ -391,7 +395,7 @@ footer
     margin-bottom 8px
     margin-top 3px
     span
-      font-size 11px
+      font-size 10px
     
     /* Small devices (tablets, 768px and up) */
     @media screen and (min-width: 768px) 
@@ -402,9 +406,6 @@ footer
     background-color #565564
     border-radius 20px 20px 20px 20px  
     overflow hidden  
-    // position absolute  
-    // left 50px
-    // top 47px
     width 100%
     height 8px 
     -webkit-box-shadow 0 1px 1px 0 rgba(0,0,0,0.2) inset  
@@ -423,8 +424,8 @@ footer
       width 100%
   
   span.play
-    font-size 24px
-    margin-top 20px
+    font-size 19px
+    margin-top 25px
     padding 0
     display inline
     color white
@@ -456,7 +457,7 @@ footer
 
 .featured-area
   background #e9e8ef
-  height 645px
+  height 670px
   
   /* Small devices (tablets, 768px and up) */
   @media screen and (min-width: 768px) 
@@ -674,8 +675,13 @@ footer
   letter-spacing 1px
   min-height 50px
   
-  border-bottom-left-radius 3px
-  border-bottom-right-radius 3px
+  border-bottom-left-radius 0px
+  border-bottom-right-radius 0px
+  
+  /* Small devices (tablets, 768px and up) */
+  @media screen and (min-width: 768px) 
+    border-bottom-left-radius 3px
+    border-bottom-right-radius 3px
   
   a
     color white
@@ -688,13 +694,18 @@ footer
     // background #666
     background #0f0e23
     padding 18px 30px 15px !important
-    border-top-left-radius 3px
-    border-top-right-radius 3px
+    border-top-left-radius 0px
+    border-top-right-radius 0px
     border-bottom-left-radius 0px
     border-bottom-right-radius 0px
     
     span.more
       opacity .85
+      
+    /* Small devices (tablets, 768px and up) */
+    @media screen and (min-width: 768px) 
+      border-top-left-radius 3px
+      border-top-right-radius 3px
     
   
   .podcast-social
